force-app/main/default/objects/animalos__Animal__c/fields/animalos__QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>animalos__QR_Code_Image__c</fullName>
    <formula>IMAGE(&apos;https://quickchart.io/chart?cht=qr&amp;chs=175x175&amp;chl=&apos; &amp; animalos__QR_Code_Image_Editable__c &amp; Name,&apos;QR Code Image&apos;, 175, 175)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code Image Formula</label>
    <type>Text</type>
</CustomField>