force-app/main/default/objects/animalos__Animal__c/fields/animalos__QR_Code_Image_Editable__c.field-meta.xml
<CustomField>
    <fullName>animalos__QR_Code_Image_Editable__c</fullName>
    <label>QR Code Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>