force-app/main/default/objects/animalos__Animal__c/fields/animalos__Referral_Animal_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Animal_Source__c</fullName>
    <label>Referral Animal Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>