force-app/main/default/objects/animalos__Animal__c/fields/animalos__Row_Unit__c.field-meta.xml
<CustomField>
    <fullName>animalos__Row_Unit__c</fullName>
    <formula>animalos__Current_Block__r.Name &amp; &apos; / &apos; &amp; animalos__Current_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Row &amp; Unit</label>
    <type>Text</type>
</CustomField>