force-app/main/default/objects/animalos__Animal__c/fields/animalos__Second_Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__Second_Microchip_Number__c</fullName>
    <label>Second Microchip Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>