force-app/main/default/objects/animalos__Animal__c/fields/animalos__Secondary_Breed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Secondary_Breed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Breed</label>
    <referenceTo>animalos__Breed__c</referenceTo>
    <relationshipLabel>Animals (Secondary Breed)</relationshipLabel>
    <relationshipName>Animals_Secondary_Breed</relationshipName>
    <type>Lookup</type>
</CustomField>