force-app/main/default/objects/animalos__Animal__c/fields/animalos__Secondary_Colour__c.field-meta.xml
<CustomField>
    <fullName>animalos__Secondary_Colour__c</fullName>
    <label>Secondary Colour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agouti</fullName>
            </value>
            <value>
                <fullName>Albino</fullName>
            </value>
            <value>
                <fullName>Appaloosa</fullName>
            </value>
            <value>
                <fullName>Apricot</fullName>
            </value>
            <value>
                <fullName>Badgerface</fullName>
            </value>
            <value>
                <fullName>Bay</fullName>
            </value>
            <value>
                <fullName>Beige</fullName>
            </value>
            <value>
                <fullName>Belton</fullName>
            </value>
            <value>
                <fullName>Birchen</fullName>
            </value>
            <value>
                <fullName>Biscuit</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Black Brindle</fullName>
            </value>
            <value>
                <fullName>Black Brown</fullName>
            </value>
            <value>
                <fullName>Black Otter</fullName>
            </value>
            <value>
                <fullName>Black Tan</fullName>
            </value>
            <value>
                <fullName>Blenheim</fullName>
            </value>
            <value>
                <fullName>Blonde</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Blue Bicolour</fullName>
            </value>
            <value>
                <fullName>Blue Black</fullName>
            </value>
            <value>
                <fullName>Blue Brindle</fullName>
            </value>
            <value>
                <fullName>Blue Cream Tortoiseshell</fullName>
            </value>
            <value>
                <fullName>Blue Eyed White</fullName>
            </value>
            <value>
                <fullName>Blue Fawn</fullName>
            </value>
            <value>
                <fullName>Blue Fawn Brindle</fullName>
            </value>
            <value>
                <fullName>Blue Marten</fullName>
            </value>
            <value>
                <fullName>Blue Merle</fullName>
            </value>
            <value>
                <fullName>Blue Otter</fullName>
            </value>
            <value>
                <fullName>Blue Point</fullName>
            </value>
            <value>
                <fullName>Blue Roan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>