force-app/main/default/objects/animalos__Animal__c/fields/animalos__Shelter_ID__c.field-meta.xml
<CustomField>
    <fullName>animalos__Shelter_ID__c</fullName>
    <label>Shelter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>