force-app/main/default/objects/animalos__Animal__c/fields/animalos__Size__c.field-meta.xml
<CustomField>
    <fullName>animalos__Size__c</fullName>
    <formula>TEXT(animalos__Primary_Breed__r.animalos__Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size</label>
    <type>Text</type>
</CustomField>