force-app/main/default/objects/animalos__Animal__c/fields/animalos__Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bequest In Site</fullName>
            </value>
            <value>
                <fullName>Council / Site</fullName>
            </value>
            <value>
                <fullName>Cruelty Case Offspring</fullName>
            </value>
            <value>
                <fullName>Emergency Boarding</fullName>
            </value>
            <value>
                <fullName>Euthanasia Request</fullName>
            </value>
            <value>
                <fullName>Foster Offspring</fullName>
            </value>
            <value>
                <fullName>Humane Officer - Euthanasia Request</fullName>
            </value>
            <value>
                <fullName>Humane Officer Seized</fullName>
            </value>
            <value>
                <fullName>Humane Officer Surrendered</fullName>
            </value>
            <value>
                <fullName>Owner Surrender</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Site Offspring</fullName>
            </value>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>DOA - Humane Officer Seized</fullName>
            </value>
            <value>
                <fullName>DOA - Humane Officer Surrendered</fullName>
            </value>
            <value>
                <fullName>DOA - Owner Surrendered</fullName>
            </value>
            <value>
                <fullName>DOA - Wildlife</fullName>
            </value>
            <value>
                <fullName>DOA - Stray</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Owner Relinquishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>