force-app/main/default/objects/animalos__Animal__c/fields/animalos__Stage__c.field-meta.xml
<CustomField>
    <fullName>animalos__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Intake</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Under Care</fullName>
            </value>
            <value>
                <fullName>Adoption Ready</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>