force-app/main/default/objects/animalos__Animal__c/fields/animalos__Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Adopted – Awaiting Pickup</fullName>
            </value>
            <value>
                <fullName>Adopted - Awaiting Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Adopted – Offsite</fullName>
            </value>
            <value>
                <fullName>Adoption Pending/Hold on Property Check</fullName>
            </value>
            <value>
                <fullName>Available For Adoption</fullName>
            </value>
            <value>
                <fullName>Available For Adoption – Awaiting Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Available For Adoption – In Foster</fullName>
            </value>
            <value>
                <fullName>Available For Adoption – No Web Presence</fullName>
            </value>
            <value>
                <fullName>Available For Adoption – Offsite</fullName>
            </value>
            <value>
                <fullName>Available For Adoption – Waiting Space</fullName>
            </value>
            <value>
                <fullName>Awaiting Behavioural Assessment</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Evaluation</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Retest</fullName>
            </value>
            <value>
                <fullName>Awaiting Desex</fullName>
            </value>
            <value>
                <fullName>Awaiting Euthanasia</fullName>
            </value>
            <value>
                <fullName>Awaiting Foster</fullName>
            </value>
            <value>
                <fullName>Awaiting Rescue</fullName>
            </value>
            <value>
                <fullName>Awaiting Spay/Neuter – In Foster</fullName>
            </value>
            <value>
                <fullName>Awaiting Surgery – Not Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Awaiting Transfer</fullName>
            </value>
            <value>
                <fullName>Awaiting Triage</fullName>
            </value>
            <value>
                <fullName>Awaiting Triage Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting Vet Exam/Health Check</fullName>
            </value>
            <value>
                <fullName>Bequest Animal Offsite</fullName>
            </value>
            <value>
                <fullName>Bequest Animal Off Site</fullName>
            </value>
            <value>
                <fullName>Bequest Animal Onsite</fullName>
            </value>
            <value>
                <fullName>Bequest Animal On Site</fullName>
            </value>
            <value>
                <fullName>Court Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>