force-app/main/default/objects/animalos__Animal__c/fields/animalos__Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Status_Changed_Date__c</fullName>
    <label>Status Changed Date</label>
    <type>Date</type>
</CustomField>