force-app/main/default/objects/animalos__Animal__c/fields/animalos__Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Vet Check</fullName>
            </value>
            <value>
                <fullName>Agisted Offsite</fullName>
            </value>
            <value>
                <fullName>Approved Awaiting Processing</fullName>
            </value>
            <value>
                <fullName>Approved Handlers Only</fullName>
            </value>
            <value>
                <fullName>Available For Doggy day out</fullName>
            </value>
            <value>
                <fullName>Available For Pillow Paws</fullName>
            </value>
            <value>
                <fullName>Awaiting Auth Tx Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting AWAG</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Evaluation</fullName>
            </value>
            <value>
                <fullName>Awaiting Behaviour Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Canine Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Awaiting Collection</fullName>
            </value>
            <value>
                <fullName>Awaiting Dental</fullName>
            </value>
            <value>
                <fullName>Awaiting Desex</fullName>
            </value>
            <value>
                <fullName>Awaiting Dog to Dog</fullName>
            </value>
            <value>
                <fullName>Awaiting Farrier/Shearer</fullName>
            </value>
            <value>
                <fullName>Awaiting Foster</fullName>
            </value>
            <value>
                <fullName>Awaiting Foster Collection</fullName>
            </value>
            <value>
                <fullName>Awaiting Fungal Culture Results</fullName>
            </value>
            <value>
                <fullName>Awaiting Further Information (see notes)</fullName>
            </value>
            <value>
                <fullName>Awaiting Handler Evaluation</fullName>
            </value>
            <value>
                <fullName>Awaiting In-Home Assessment</fullName>
            </value>
            <value>
                <fullName>Awaiting In-Home Evaluation</fullName>
            </value>
            <value>
                <fullName>Awaiting Isolation Review (see notes)</fullName>
            </value>
            <value>
                <fullName>Awaiting Management Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Owner Reclaim</fullName>
            </value>
            <value>
                <fullName>Awaiting Rescue</fullName>
            </value>
            <value>
                <fullName>Awaiting Separation Behaviour Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Sick Animal Vet Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>