force-app/main/default/objects/animalos__Animal__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Type</valueSetName>
    </valueSet>
</CustomField>