force-app/main/default/objects/animalos__Animal__c/fields/aos_About_Me_Adoptapet__c.field-meta.xml
<CustomField>
    <fullName>aos_About_Me_Adoptapet__c</fullName>
    <label>About Me (Adoptapet)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>