force-app/main/default/objects/animalos__Animal__c/fields/aos_Action_Flag_External__c.field-meta.xml
<CustomField>
    <fullName>aos_Action_Flag_External__c</fullName>
    <formula>IF(
ISBLANK(animalos__Action_Flag_Condition__c),
IMAGE(&quot;../resource/animalos__indicatorIcons/green.png&quot;,&quot;GREEN&quot;, 30, -1),
IF(
animalos__Action_Flag_Condition__c = &quot;GREEN&quot;,
IMAGE(&quot;../resource/animalos__indicatorIcons/green.png&quot;,&quot;GREEN&quot;, 30, -1),
IF(
animalos__Action_Flag_Condition__c = &quot;YELLOW&quot;,
IMAGE(&quot;../resource/animalos__indicatorIcons/yellow.png&quot;,&quot;YELLOW&quot;, 30, -1),
IF(
animalos__Action_Flag_Condition__c = &quot;RED&quot;,
IMAGE(&quot;../resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 30, -1),
&quot;&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Flag External</label>
    <type>Text</type>
</CustomField>