force-app/main/default/objects/animalos__Animal__c/fields/aos_Activity_level_playfulness__c.field-meta.xml
<CustomField>
    <fullName>aos_Activity_level_playfulness__c</fullName>
    <label>Activity level/playfulness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High (includes kittens)</fullName>
                <label>High (e.g. kittens, adolescent cats, certain breeds)</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Average</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>Relaxed (e.g. Seniors)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>