force-app/main/default/objects/animalos__Animal__c/fields/aos_Adaptability__c.field-meta.xml
<CustomField>
    <fullName>aos_Adaptability__c</fullName>
    <inlineHelpText>What level of fear/anxiety/frustration does this animal show in new or novel environments.</inlineHelpText>
    <label>Adaptability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low (Lower scores on daily observations – may need time and encouragement in new surroundings)</fullName>
                <label>1 - Lower scores on daily observations – may need time and encouragement in new surroundings</label>
            </value>
            <value>
                <fullName>Medium (Higher scores on daily observations – explores when it can retreat)</fullName>
                <label>2 - Higher scores on daily observations – explores when it can retreat</label>
            </value>
            <value>
                <fullName>High (Fearful protocol used, UBM, high needs inspectorate or caution sign used in care)</fullName>
                <label>3 - Fearful protocol used, UBM, high needs inspectorate or caution sign used in care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>