force-app/main/default/objects/animalos__Animal__c/fields/aos_Adopter_Experience__c.field-meta.xml
<CustomField>
    <fullName>aos_Adopter_Experience__c</fullName>
    <inlineHelpText>What level of training or behaviour management does this dog require?</inlineHelpText>
    <label>Behaviour and Training Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs minimal training (e.g. senior dogs)</fullName>
            </value>
            <value>
                <fullName>Needs daily opportunities to learn about life (e.g. puppies, most dogs)</fullName>
            </value>
            <value>
                <fullName>Needs experienced owner for management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>