force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Date__c</fullName>
    <label>Adoption Date</label>
    <type>Date</type>
</CustomField>