force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_EOI_Required__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_EOI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If animal requires an EOI for adoption, please tick this box. This will sync with the website.</description>
    <inlineHelpText>If animal requires an EOI for adoption, please tick this box. This will sync with the website.</inlineHelpText>
    <label>Adoption - EOI Required</label>
    <type>Checkbox</type>
</CustomField>