force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_General_Summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_General_Summary__c</fullName>
    <label>Adoption - General Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>