force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Health_Ready__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Health_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adoption Health Ready</label>
    <type>Checkbox</type>
</CustomField>