force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Level__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Level__c</fullName>
    <label>Adoption Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFA Level 1</fullName>
            </value>
            <value>
                <fullName>SFA Level 2</fullName>
            </value>
            <value>
                <fullName>SFA Level 3</fullName>
            </value>
            <value>
                <fullName>SFA - Behaviour Team</fullName>
            </value>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>Trial Adoption/Post Adoptive support required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>