force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Progress_Incomplete_Fields__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Progress_Incomplete_Fields__c</fullName>
    <label>Adoption Progress Incomplete Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>