force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Progress_Percentage__c</fullName>
    <label>Adoption Progress Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>