force-app/main/default/objects/animalos__Animal__c/fields/aos_Adoption_Video__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Video__c</fullName>
    <label>Adoption Video</label>
    <type>Url</type>
</CustomField>