force-app/main/default/objects/animalos__Animal__c/fields/aos_Age_on_Arrival__c.field-meta.xml
<CustomField>
    <fullName>aos_Age_on_Arrival__c</fullName>
    <description>Difference between incoming date and DOB</description>
    <formula>CASE(
    FLOOR(( DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c) / 365),
    0, &apos;&apos;, 
    TEXT( FLOOR(( DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c) / 365 )) &amp; &quot; YEARS &quot;
) 
&amp; 
CASE( 
    FLOOR( MOD( DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c, 365 ) / 30.44 ),
    0, &apos;&apos;, 
    TEXT( FLOOR( MOD( DATEVALUE (animalos__Incoming_Date__c) - animalos__Date_of_Birth__c, 365 ) / 30.44 ) ) &amp; &quot; MONTHS &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age on Arrival</label>
    <type>Text</type>
</CustomField>