force-app/main/default/objects/animalos__Animal__c/fields/aos_Age_on_Arrival_Days__c.field-meta.xml
<CustomField>
    <fullName>aos_Age_on_Arrival_Days__c</fullName>
    <formula>DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age on Arrival (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>