force-app/main/default/objects/animalos__Animal__c/fields/aos_Age_on_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>aos_Age_on_Outgoing__c</fullName>
    <description>Difference between Outgoing date and DOB</description>
    <formula>CASE(
    FLOOR(( animalos__Outgoing_Date__c - animalos__Date_of_Birth__c) / 365),
    0, &apos;&apos;, 
    TEXT( FLOOR(( animalos__Outgoing_Date__c - animalos__Date_of_Birth__c) / 365 )) &amp; &quot; YEARS &quot;
) 
&amp; 
CASE( 
    FLOOR( MOD( animalos__Outgoing_Date__c - animalos__Date_of_Birth__c, 365 ) / 30.44 ),
    0, &apos;&apos;, 
    TEXT( FLOOR( MOD( animalos__Outgoing_Date__c - animalos__Date_of_Birth__c, 365 ) / 30.44 ) ) &amp; &quot; MONTHS &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age on Outgoing</label>
    <type>Text</type>
</CustomField>