force-app/main/default/objects/animalos__Animal__c/fields/aos_Age_Restriction__c.field-meta.xml
<CustomField>
    <fullName>aos_Age_Restriction__c</fullName>
    <inlineHelpText>How does this animal relate to people of different ages?</inlineHelpText>
    <label>Age Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no known child related issues</fullName>
                <label>All ages</label>
            </value>
            <value>
                <fullName>6 years +</fullName>
            </value>
            <value>
                <fullName>12 years +</fullName>
            </value>
            <value>
                <fullName>15 +</fullName>
            </value>
            <value>
                <fullName>adult household only</fullName>
                <label>Adult household</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>