force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Bitten_Someone__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Bitten_Someone__c</fullName>
    <label>Animal Bitten Someone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>