force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_is_Ready_for_Release__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_is_Ready_for_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal is Ready for Release</label>
    <type>Checkbox</type>
</CustomField>