force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Reference_Number__c</fullName>
    <label>Animal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>