force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Release_By_Text__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Release_By_Text__c</fullName>
    <label>Animal Release By Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>