force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Released__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Released</label>
    <type>Checkbox</type>
</CustomField>