force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Released_By__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Released_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Released By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Released_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>