force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Released_Date__c</fullName>
    <label>Animal Released Date</label>
    <type>DateTime</type>
</CustomField>