force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Size__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Size__c</fullName>
    <label>Animal Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>