force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Stage_Cost__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Stage_Cost__c</fullName>
    <label>Animal Stage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>