force-app/main/default/objects/animalos__Animal__c/fields/aos_Animal_Status_Cost__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Status_Cost__c</fullName>
    <label>Animal Status Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>