force-app/main/default/objects/animalos__Animal__c/fields/aos_Approved_For_Adoption_By__c.field-meta.xml
<CustomField>
    <fullName>aos_Approved_For_Adoption_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved For Adoption By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Approved_Animal_Adoptions</relationshipName>
    <type>Lookup</type>
</CustomField>