force-app/main/default/objects/animalos__Animal__c/fields/aos_Approved_For_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Approved_For_Adoption_Date__c</fullName>
    <label>Approved For Adoption Date</label>
    <type>Date</type>
</CustomField>