force-app/main/default/objects/animalos__Animal__c/fields/aos_Attending_Vet__c.field-meta.xml
<CustomField>
    <fullName>aos_Attending_Vet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending Vet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Animals_Attending_Vet</relationshipName>
    <type>Lookup</type>
</CustomField>