force-app/main/default/objects/animalos__Animal__c/fields/aos_Behaviour_around_food_and_other__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour_around_food_and_other__c</fullName>
    <label>Behaviour around food and other resource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Of concern</fullName>
            </value>
            <value>
                <fullName>Manageable</fullName>
            </value>
            <value>
                <fullName>Low Concern</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>